# my-osm-project

./: .gitignore  DEVELOPER.md  README.md  pyproject.toml  requirements.txt
urbanicity/: __init__.py  build.py  cli.py  config.py  h3grid.py  io.py  metrics.py  osm.py  pipeline.py  score.py  validate.py
